<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="edu.ucsc.cse118.assignment3.ui.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_workspaceFragment"
            app:destination="@id/workspaceFragment" />
    </fragment>
    <fragment
        android:id="@+id/workspaceFragment"
        android:name="edu.ucsc.cse118.assignment3.ui.workspace.WorkspaceFragment"
        android:label="@string/select_workspace"
        tools:layout="@layout/fragment_workspace">
        <action
            android:id="@+id/action_workspaceFragment_to_channelFragment"
            app:destination="@id/channelFragment" />
    </fragment>
    <fragment
        android:id="@+id/channelFragment"
        android:name="edu.ucsc.cse118.assignment3.ui.channel.ChannelFragment"
        android:label="@string/select_channel"
        tools:layout="@layout/fragment_channel">
        <action
            android:id="@+id/action_channelFragment_to_messageFragment"
            app:destination="@id/messageFragment" />
    </fragment>
    <fragment
        android:id="@+id/messageFragment"
        android:name="edu.ucsc.cse118.assignment3.ui.message.MessageFragment"
        android:label="@string/select_message"
        tools:layout="@layout/fragment_message">
        <action
            android:id="@+id/action_messageFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_messageFragment_to_newMessageFragment"
            app:destination="@id/newMessageFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="edu.ucsc.cse118.assignment3.ui.detail.DetailFragment"
        android:label="@string/select_detail"
        tools:layout="@layout/fragment_detail">
    </fragment>
    <fragment
        android:id="@+id/newMessageFragment"
        android:name="edu.ucsc.cse118.assignment3.ui.newMessage.NewMessageFragment"
        android:label="@string/select_new_message"
        tools:layout="@layout/fragment_new_message">
    </fragment>
</navigation>